# DjangoYouTubeVideos

./: .gitignore  README.md  requirements.txt
webProjectVideo2/: .gitignore  README.md  pyproject.toml
webProjectVideo3/: README.md  pyproject.toml
webProjectVideo3/core/: settings.py  urls.py
webProjectVideo3/core/templates/includes/: footer.html  navbar.html
webProjectVideo3/core/templates/layouts/: base.html
webProjectVideo3/core/templates/myapp/: index.html
webProjectVideo4/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
webProjectVideo4/core/: settings.py  urls.py
webProjectVideo4/core/templates/includes/: footer.html  navbar.html
webProjectVideo4/core/templates/layouts/: base.html
webProjectVideo4/core/templates/myapp/: index.html
webProjectVideo5/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
webProjectVideo5/core/: settings.py  urls.py
webProjectVideo5/core/templates/includes/: footer.html  navbar.html
webProjectVideo5/core/templates/layouts/: base.html
webProjectVideo5/core/templates/myapp/: add_product.html  list_product.html  update_product.html
webProjectVideo5/myapp/: models.py  urls.py  views.py
webProjectVideo5/myapp/migrations/: 0001_initial.py
