[project]
name = "webproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "ruff>=0.15.12",
]
prod = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "python-decouple>=3.8",
    "whitenoise>=6.12.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]
