[project]
name = "webproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-widget-tweaks>=1.5.1",
    "pillow>=12.2.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "ruff>=0.15.9",
]
prod = [
    "django>=6.0.3",
    "whitenoise>=6.12.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]
